# play-with-VirtualContainer

./: .gitignore  README.md
docker/1.redis/: pyproject.toml  readme.md  test.ipynb
