[tool.poetry]
name = "1.redis"
version = "0.1.0"
description = ""
authors = ["yingshaoxo@gmail.com"]

[tool.poetry.dependencies]
python = "^3.9"
redis = "^4.1.1"
jupyter = "^1.0.0"
notebook = "^6.4.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
